k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-app
  namespace: tetris
  labels:
    app: tetris-app
spec:
  type: ClusterIP
  selector:
    app: tetris-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 9113
      targetPort: 9113
